# garpix-algorithm

./: CMakeLists.txt  README.md  Readme.md  welp.sh
src/: main.cpp
